@@ -1,6 +1,7 @@
 version 0.8.2 - XX-MMM-2009
  . Actions: added Ease Elastic actions (issue #530)
  . CocosDenshion: muted property in SimpleAudioEngine (issue #526)
+ . Director: added convertToUI and renamed convertCoordinate to convertToGL (issue #531)
  . RenderTexture: added RenderTexture test (issue #XXX)
  
 version 0.8.1 - 26-Ago-2009
